Fix barchart spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
         height: 100%;
         background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
       }
-      footer {
+      header {
         position: relative;
         left: 0;
         bottom: 0;
